# dds-experiments

./: CMakeLists.txt
generic_subscriber/: CMakeLists.txt  example_type.xml  main.cpp  mainpub.cpp  publisher.cpp  publisher.h  subscriber.cpp  subscriber.h
msgs/: CMakeLists.txt  Examples.cxx  Examples.h  Examples.idl  ExamplesPubSubTypes.cxx  ExamplesPubSubTypes.h
video_publisher/: CMakeLists.txt  main.cpp  publisher.cpp  publisher.h
video_publisher/msgs/: video_frame.cxx  video_frame.h  video_frame.idl  video_framePubSubTypes.cxx  video_framePubSubTypes.h
video_publisher_dynamic/: CMakeLists.txt  publisher.cpp
video_publisher_static/: CMakeLists.txt  main.cpp  publisher.cpp  publisher.h
video_subscriber_static/: CMakeLists.txt  main.cpp  subscriber.cpp  subscriber.h
wrapper/: wrapper.h
